Fix alignment and change layout for small screens

--- a/src/components/AdminAccount.css
+++ b/src/components/AdminAccount.css
@@ -5,10 +5,11 @@
 	width: 75%;
 	margin: 150px auto 50px auto;
 	border-radius: 4px;
-	/* padding: 8px; */
+	padding: 8px;
 	font-size: 20px;
 	background: #D2F7F3;
 }
+
 .employee_contact_list {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
@@ -32,10 +33,6 @@
 	font-size: 20px;
 }
 
-.employee_contact_row li {
-	list-style-type: none;
-}
-
 
 .contact_list {
 	border-bottom: solid white;
@@ -43,4 +40,74 @@
 	/* padding: 3px */
 	height: 30px;
 	padding-left: 8px
+}
+
+
+.staff_member_container {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-row-gap: 5px;
+	width: 75%;
+	max-width: 1200px;
+	height: auto;
+	margin: 250px auto 50px auto;
+	border-radius: 4px;
+	font-size: 20px;
+	background: #D2F7F3;
+}
+.admin_employee_row {
+	border: solid black;
+	border-radius: 4px;
+	padding: 5px;
+	margin: 3px;
+	background-color: #668295;
+	font-size: 20px;
+}
+
+@media only screen and (min-width: 769px) {
+	.staff_member_container-mobile {
+		display: none;
+	}	
+
+	.staff_member_container {
+		width: 90%;
+		font-size: 18px;
+	}	
+}
+
+@media only screen and (max-width: 768px) {
+	.staff_member_container {
+		display: none;
+	}	
+
+	.staff_member_container-mobile {
+		width: 90%;
+	}	
+}
+
+@media only screen and (max-width: 550px) {
+	.staff_member_container-mobile {
+		width: 95%;
+	}	
+}
+
+@media only screen and (min-width: 1000px) {
+	.staff_member_container {
+		width: 85%;
+		font-size: 20px;
+
+	}	
+}
+
+@media only screen and (max-width: 900px) {
+	.staff_member_container {
+		font-size: 15px;
+
+	}	
+}
+
+@media only screen and (min-width: 1200px) {
+	.staff_member_container {
+		width: 80%;
+	}	
 }
