--- a/src/components/Contacts.css
+++ b/src/components/Contacts.css
@@ -1,6 +1,7 @@
 .contact_page {
 	display: flex;
-	/* height: 100vh; */
+	background: rgba(43,35, 65, 25);
+	height: 100vh;
 }
 
 .contact_list_container {
@@ -36,16 +37,20 @@
 }
 
 .contact_list_container-mobile {
-	display: grid;
-	border: solid;
-	grid-template-rows: repeat(10, 1fr);
-	grid-row-gap: 5px;
+	display: flex;
+	flex-direction: column;
 	width: 75%;
 	height: auto;
 	margin: 250px auto 50px auto;
 	border-radius: 4px;
 	font-size: 20px;
-	background: #D2F7F3;
+}
+
+.contact_card_mobile {
+	background: rgba(43,35, 65, 2);
+	border: solid;
+	border-radius: 3px;
+	margin-bottom: 5px;
 }
 
 .contact_label-mobile {
@@ -57,9 +62,6 @@
 	margin: 5px 10px 10px 10px;
 }
 
-.contact_availability {
-	border-bottom: solid;
-}
 
 @media only screen and (min-width: 769px) {
 	.contact_list_container-mobile {
